--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         springfoxVersion = '2.9.2'
         lombokVersion = '1.18.6'
         mockitoVersion = '3.3.3'
+        mapstructVersion = '1.3.1.Final'
     }
 }
 
@@ -11,6 +12,7 @@ plugins {
     id 'maven'
     id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'net.ltgt.apt' version '0.20'
 }
 
 group 'cz.rohlik.warehouse'
@@ -24,13 +26,16 @@ repositories {
 
 dependencies {
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "org.projectlombok:lombok:${lombokVersion}"
     implementation "io.springfox:springfox-swagger2:${springfoxVersion}"
     implementation "io.springfox:springfox-swagger-ui:${springfoxVersion}"
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 
     runtime "com.h2database:h2"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
